# ams_game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
ams_core/: CMakeLists.txt
ams_core/include/: ams.hpp
ams_core/include/ams/: Array.hpp  Function.hpp  List.hpp  Math.hpp  Serializable.hpp  StringExtensions.hpp  Uuid.hpp  ams_core_export.h  concepts.hpp  config.hpp  uuid.hpp
ams_core/include/ams/impl/: config.hpp
ams_core/include/modules/: ams.cppm
ams_core/include/modules/ams/: Array.cppm  CallbackList.cppm  List.cppm  Math.cppm  Uuid.cppm  config.cppm  uuid.cppm
ams_core/include/modules/ams/impl/: config.cppm
ams_core/public/: ams-Array.cppm  ams-Function.cppm  ams-List.cppm  ams-Math.cppm  ams-Random.cppm  ams-Serializable.cppm  ams-StringExtensions.cppm  ams-UniquePtrExtensions.cppm  ams-Uuid.cppm  ams-concepts.cppm  ams-config.cppm  ams.Exceptions-Exception.cppm  ams.Exceptions-NullPointerException.cppm  ams.Exceptions.cppm  ams.cppm
ams_core/src/: StringExtensions.cpp  Uuid.cpp  ams-StringExtensions.cxx  ams.cpp  uuid.cpp
ams_game/: CMakeLists.txt
ams_game/cmake/: ams_game_sysinfo.hpp.in
ams_game/include/ams/: game.hpp
ams_game/include/ams/game/: Application.hpp  ApplicationInfo.hpp  Behavior.hpp  Camera.hpp  Component.hpp  Display.hpp  Entity.hpp  Exceptions.hpp  GameObject.hpp  ISerializable.hpp  Key.hpp  Logger.hpp  Mesh.hpp  MeshLoaders.hpp  Mouse.hpp  Object.hpp  Platform.hpp  Renderer.hpp  Scene.hpp  SystemInfo.hpp  Transform.hpp  Util.hpp  Window.hpp  config.hpp
ams_game/include/ams/game/Components/: MeshComponent.hpp
ams_game/include/ams/game/Exceptions/: ArgumentException.hpp  Exception.hpp  LoggerException.hpp  NullPointerException.hpp
ams_game/include/ams/game/MeshLoaders/: AMSMeshLoader.hpp  BlendMeshLoader.hpp  CommonLoader.hpp  FBXMeshLoader.hpp  GLBMeshLoader.hpp  GLTFMeshLoader.hpp  ObjMeshLoader.hpp  PlyMeshLoader.hpp
ams_game/include/ams/game/internal/: ActiveComponent.hpp  CallbackList.hpp  Meshes.hpp  RendererBackend.hpp  RendererOpenGL.hpp  RendererVulkan.hpp
ams_game/include/modules/ams/: game.cppm
ams_game/include/modules/ams/game/: Application.cppm  Behavior.cppm  Camera.cppm  Component.cppm  Entity.cppm  Exceptions.cppm  GameObject.cppm  Object.cppm  Platform.cppm  Scene.cppm  Transform.cppm  Util.cppm  config.cppm
ams_game/include/modules/ams/game/Exceptions/: Exception.cppm  NullPointerException.cppm
ams_game/include/modules/ams/game/internal/: ActiveComponent.cppm  CallbackList.cppm
ams_game/src/game/: Application.cpp  Behavior.cpp  Camera.cpp  Component.cpp  Display.cpp  Entity.cpp  Logger.cpp  Mesh.cpp  Platform.cpp  Renderer.cpp  Scene.cpp  SystemInfo.cpp  Transform.cpp  Util.cpp  Window.cpp
ams_game/src/game/Components/: MeshComponent.cpp
ams_game/src/game/MeshLoaders/: AMSMeshLoader.cpp  BlendMeshLoader.cpp  CommonLoader.cpp  FBXMeshLoader.cpp  GLBMeshLoader.cpp  GLTFMeshLoader.cpp  ObjMeshLoader.cpp  PlyMeshLoader.cpp
ams_game/src/game/internal/: ActiveComponent.cpp  Meshes.cpp  RendererOpenGL.cpp  RendererVulkan.cpp
ams_spatial/: CMakeLists.txt
ams_spatial/include/ams/: spatial.hpp
ams_spatial/include/ams/spatial/: Matrix.hpp  Quaternion.hpp  Vec.hpp  config.hpp
ams_spatial/include/ams/spatial/Matrix/: Matrix2.hpp  Matrix3.hpp  Matrix4.hpp
ams_spatial/include/ams/spatial/Vec/: Vec2.hpp  Vec3.hpp  Vec4.hpp
ams_spatial/include/ams/spatial/internal/: config.hpp  internal.hpp  matrix.hpp
ams_spatial/include/modules/ams/: spatial.cppm
ams_spatial/include/modules/ams/spatial/: Matrix.cppm  Quaternion.cppm  Vec.cppm
ams_spatial/include/modules/ams/spatial/Matrix/: Matrix2.cppm  Matrix3.cppm  Matrix4.cppm
ams_spatial/include/modules/ams/spatial/Vec/: Vec2.cppm  Vec3.cppm  Vec4.cppm
ams_spatial/include/modules/ams/spatial/internal/: config.cppm  internal.cppm  matrix.cppm
ams_spatial/public/: ams.spatial-Matrix2.cppm  ams.spatial-Matrix3.cppm  ams.spatial-Matrix4.cppm  ams.spatial-MatrixFunctions.cppm  ams.spatial-Quaternion.cppm  ams.spatial-Vec2.cppm  ams.spatial-Vec3.cppm  ams.spatial-Vec4.cppm  ams.spatial-VecFunctions.cppm  ams.spatial-config.cppm  ams.spatial.cppm  ams.spatial.matrix.cppm
ams_spatial/src/: ams.spatial-Matrix2.cxx  ams.spatial-Matrix3.cxx  ams.spatial-Matrix4.cxx  ams.spatial-MatrixFunctions.cxx  ams.spatial-Quaternion.cxx  spatial.cpp  spatial.cxx
ams_spatial/src/spatial/: Matrix.cpp  Quaternion.cpp
ams_spatial/src/spatial/Matrix/: Matrix2.cpp  Matrix3.cpp  Matrix4.cpp
ams_spatial/src/spatial/Vec/: Vec2.cpp  Vec3.cpp  Vec4.cpp
buildscripts/: CopyModules.ps1  CopyModules.py  CopyModules.sh  get-loc.sh  header2module.py
cmake/: ModulePlatformCheck.cmake  Utils.cmake  ams-config.cmake.in  dict.cmake  dict.py
cmake/test/: test-dict.cmake
include/ams/: Math.hpp  Matrix.hpp  Platform.hpp  Vec.hpp
modules/ams/: Math.cppm  Matrix.cppm  Platform.cppm  Vec.cppm
shell/: utilsenv.ps1
src/ams/: Platform.cpp
test/: .gitignore  CMakeLists.txt  test_Math.cpp  test_Matrix.cpp  test_Vec.cpp  test_gfx.cpp  test_olc.cpp
test/core/: CMakeLists.txt  test_Array.cpp  test_Exception.cpp  test_Function.cpp  test_List.cpp  test_Math.cpp  test_StringExtensions.cpp  test_UniquePointerExtensions.cpp  test_uuid.cpp
test/game/: CMakeLists.txt  profile_Game.cpp  test_ApplicationAndScene.cpp  test_ComponentAndEntity.cpp  test_Exception.cpp  test_Game.cpp  test_GameUtil.cpp  test_Log.cpp  test_Mesh.cpp  test_Window.cpp  test_gfx.cpp
test/spatial/: CMakeLists.txt  test_Matrix.cpp  test_Quaternion.cpp  test_Vec.cpp  test_olc.cpp  testv_matrix.cpp
util/: BoxComment.hpp  CMakeLists.txt  convmesh.cpp  get-loc.sh  meshpp-backup.cpp  meshpp.cpp
vs/: .gitignore  ams.sln  vcpkg.json
vs/ams_core/: ams_core.vcxproj  ams_core.vcxproj.filters
vs/ams_game/: ams_game.vcxproj  ams_game.vcxproj.filters
vs/ams_spatial/: ams_spatial.vcxproj  ams_spatial.vcxproj.filters
vs/test_core/: test_core.vcxproj
